// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup should render button group with button 1`] = `
<div
  className="btn-group"
  role="group"
>
  <Component
    className=""
    key=".0"
    kind="secondary"
    onClick={[Function]}
    type="button"
  />
</div>
`;

exports[`ButtonGroup should render empty button group 1`] = `
<div
  className="btn-group"
  role="group"
/>
`;
